add handler add skill
