# internal/use_cases/teachers/add_skill/type.go
@@ -1,0 +1,7 @@
+package add_skill
+
+type request struct {
+	CategoryId    int    `json:"category_id" example:"1" binding:"required"`
+	VideoCardLink string `json:"video_card_link" example:"https://youtu.be/HIcSWuKMwOw?si=FtxN1QJU9ZWnXy85"`
+	About         string `json:"about" example:"I am Groot"`
+}
